# namada-utils

./: .gitignore  Cargo.toml  README.md
config/: backers.txt  config.toml  core_team.txt  future_allocations.txt  keys.csv  my_addresses.txt  public_allocations_future.json  transfer_targets.csv
src/: lib.rs
