[package]
name = "namada-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_core = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_governance = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_token = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "libs-v0.47.1" }
tendermint = "0.40.1"
tendermint-config = "0.40.1"
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
tendermint-proto = "0.40.1"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
toml = "0.8.20"
