[package]
name = "namada-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
namada_core = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_sdk = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0", default-features = false, features = ["std", "async-send", "download-params"] }
namada_tx = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_governance = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_ibc = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_token = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_parameters = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
namada_proof_of_stake = { git = "https://github.com/anoma/namada", tag = "libs-v0.48.0" }
tendermint-rpc = { version = "0.40.1", features = ["http-client"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3.1"
toml = "0.8.20"
clap = { version = "4.4", features = ["derive", "cargo", "std"] }

[dependencies.js-sys]
version = "0.3.77"

[dependencies.getrandom]
version = "0.3.0"
